fixed slider sizing on small screens

--- a/style.css
+++ b/style.css
@@ -890,6 +890,7 @@ body:hover .intro-text {
 	flex-direction: row;
 }
 .instrument-slider {
+	min-width: 20px;
 	flex-grow: 1;
 	border: 2px solid var(--primary);
 	background-color: var(--dark);
